--- a/oppgaver/Rekker og Følger/Potensrekker.ipynb
+++ b/oppgaver/Rekker og Følger/Potensrekker.ipynb
@@ -116,35 +116,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.297939722600562\n",
+      "0.35354558042313583\n",
+      "0.0\n",
+      "0.00443184841193802\n",
       "0.0\n"
      ]
     }
    ],
    "source": [
-    "import math\n",
+    "import math as m\n",
     "import time\n",
-    "import numpy as np\n",
+    "import numpy as np  \n",
     "\n",
     "def f(x):\n",
     "    return np.exp(-x**2)\n",
     "\n",
     "def taylorPolynom(x,i):\n",
-    "    return sum([(-1)**n *x**2**n/(m.factorial(n)*2**n) for n in range(0, i+1)])\n",
+    "    return sum([(-1)**n *x**(2*n)/(m.factorial(n)*2**n) for n in range(0, i+1)])\n",
     "\n",
     "# Test med a=1 og n=1000\n",
     "a_value = 1\n",
     "n_value = 1000\n",
     "\n",
     "a = 0\n",
-    "b = 1\n",
+    "b = 3\n",
     "n = 100000\n",
     "bredde = (b-a)/n\n",
     "\n",
@@ -161,7 +163,7 @@
     "print(end_time- start_time)\n",
     "\n",
     "start_time = time.time()\n",
-    "print(taylorPolynom(1, 100000)/np.sqrt(2*np.pi))\n",
+    "print(taylorPolynom(3, 100)/np.sqrt(2*np.pi))\n",
     "end_time = time.time()\n",
     "print(end_time- start_time)\n",
     "\n"
